create category section

--- a/index.html
+++ b/index.html
@@ -131,7 +131,98 @@
     
 
   </section>
-  
+  <section class="category">
+    <div class="container">
+      <h1 class="text-center">Browse top category</h1>
+      <div class="row g-0 ">
+        <div class="category-item item1 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/Cpu.webp" alt="cartegory1"/></div>
+          <div class="category-info">
+            <h2>Label</h2>
+            <span>63,476 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item2 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/Handshake.webp" alt="cartegory2"/></div>
+          <div class="category-info">
+            <h2>Business</h2>
+            <span>52,822 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item3 d-flex align-items-start col-lg-3 col-md-6 col-sm-12" >
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/CreditCard.webp" alt="cartegory1"/></div>
+          <div class="category-info">
+            <h2>Finance & Accounting</h2>
+            <span>33,841 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item4 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/ChartBarHorizontal.webp" alt="cartegory4"/></div>
+          <div class="category-info">
+            <h2>IT & Software</h2>
+            <span>22,649 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item5 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/BugDroid.webp" alt="cartegory1"/></div>
+          <div class="category-info">
+            <h2>Personal Development</h2>
+            <span>20,126 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item6 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/Receipt.webp" alt="cartegory1"/></div>
+          <div class="category-info">
+            <h2>Office Productivity</h2>
+            <span>13,932 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item7 d-flex align-items-start col-lg-3  col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/MegaphoneSimple.webp" alt="cartegory1"/></div>
+          <div class="category-info">
+            <h2>Marketing</h2>
+            <span>12,068 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item8 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/Camera.webp" alt="cartegory1"/></div>
+          <div class="category-info">
+            <h2>Photography & Video</h2>
+            <span>6,196 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item9 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/Package.webp" alt="package"/></div>
+          <div class="category-info">
+            <h2>Lifestyle</h2>
+            <span>2,736 Courses</span>
+          </div>
+        </div>
+          <div class="category-item item10 d-flex align-items-start col-lg-3 col-md-6 col-sm-12"  >
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/PenNib.webp" alt="pennib "/></div>
+          <div class="category-info">
+            <h2>Design</h2>
+            <span>2,600 Courses</span>
+          </div>
+        </div>
+        <div class="category-item item11 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/FirstAidKit.webp" alt="firstaidkit"/></div>
+          <div class="category-info">
+            <h2>Health & Fitness</h2>
+            <span>1,678 Coursess</span>
+          </div>
+        </div>
+        <div class="category-item  item12 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
+          <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/Headphones.webp" alt="headphones"/></div>
+          <div class="category-info">
+            <h2>Music</h2>
+            <span>959 Courses</span>
+          </div>
+        </div>
+    </div>
+</div>
+  </section>
+ 
       </main>
   <footer class="footer py-5 ">
      <div class="container">
