--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   </section>
   <section class="category">
     <div class="container">
-      <h2 class="text-center fw-bold">Browse top category</h2>
+      <h2 class=" title text-center fw-bold">Browse top category</h2>
       <div class="row g-0 ">
         <div class="category-item item1 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
           <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/Cpu.webp" alt="cartegory1"/></div>
