create first and second navbars

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
   </div>
         </nav>
   <!--bootsrap 5.3 navbar2-->
-  <nav class=" navbar2 navbar navbar-expand-lg bg-body-tertiary">
+  <nav class=" navbar2  navbar-expand-lg bg-body-tertiary">
       <div class="container">
        <a class="navbar-brand" href="#"><img src="assets/Images/logo/LOGO.webp" alt="logo "/></a>
        <button class="  toggle navbar2 navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar2SupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
          </button>
        <div class="nav2-content collapse navbar-collapse row nav-content " id="navbar2SupportedContent">
-       <div class=" nav2-start d-flex align-items-center col-lg-7 col-md-6 col-sm-12 ">
+       <div class=" nav2-start  d-flex  align-items-center col-lg-7 col-md-6 col-sm-12 ">
           <ul class=" nav2-start navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-between align-items-center">
             <li class="nav-item dropdown  ">
           <a class="nav-link dropdown-toggle px-3" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
