create nav1&nav2 section for courses-list page

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-5">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Courses</a>
+          <a class="nav-link" href="courselist.html">Courses</a>
         </li>
        <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -134,7 +134,7 @@
   <section class="category py-5">
     <div class="container">
       <h2 class=" title text-center fw-bold">Browse top category</h2>
-      <div class="row g-0 ">
+      <div class="row g-0  mb-5">
         <div class="category-item item1 d-flex align-items-start col-lg-3 col-md-6 col-sm-12">
           <div class="category-img d-flex justify-content-center align-items-center"><img src="assets/Images/category/Cpu.webp" alt="cartegory1"/></div>
           <div class="category-info">
@@ -220,6 +220,10 @@
           </div>
         </div>
     </div>
+   
+      <a class="text-center d-flex justify-content-center align-items-center custom-color " href="category.html"> BrowseALL-> </a>
+    
+    
 </div>
   </section>
   <section class="courses py-5">
