create about1 section

--- a/about.html
+++ b/about.html
@@ -114,6 +114,16 @@
       </div> 
          </div>
       </nav>
+      <main>
+        <section class="hero1 py-5">
+            <div class="container text-center">
+               <h1>About</h1>
+               <a href="index.html">Home / </a>
+               <a href="#" class="active">About  </a>
+            </div>
+        
+        </section>
+        </main>
  
    <footer class="footer py-5 ">
      <div class="container">
