create social section

--- a/about.html
+++ b/about.html
@@ -141,7 +141,47 @@
                 </div>
             </div>
                  </section>
-        </main>
+         <section class="social py-5" >
+          <div class="container">
+            <div class="row justify-content-between align-items-center ">
+              <div class="social-start col-md-3 col-sm-12 d-flex justify-content-center align-items-center flex-column">
+                  <h2>We Just keep growing with 6.3k Companies</h2>
+                  <p>Nullam egestas tellus at enim ornare tristique. Class aptent taciti sociosqu ad litora torquent</p>
+              </div>
+              <div class="social-end offset-md-1 col-md-8 col-sm-12">
+                    <div class="row gap-3 ">
+                      <div class=" item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <a href="https://www.netflix.com/ps-en/" target="_blank"><img src="assets/Images/social/Company Logo.webp" alt="logo1"/></a>
+                      </div>
+                      <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <a href="https://www.youtube.com/" target="_blank"><img src="assets/Images/social/Company Logo (1).webp" alt="logo2"/></a>
+                      </div>
+                        <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <a href="https://www.google.com/" target="_blank"><img src="assets/Images/social/Company Logo (2).webp" alt="logo3"/></a>
+                      </div>
+                        <div class="item col-md-3 shadow-lg  col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <a href="https://www.lenovo.com/us/en/?orgRef=https%253A%252F%252Fwww.google.com%252F&srsltid=AfmBOopsroZK_K1XcVWMIg8xCra0ee4g7zJcBRy-fyi5UtdopH7BBB46" target="_blank"><img src="assets/Images/social/Company Logo (3).webp" alt="logo4"/></a>
+                      </div>
+                       <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <a href="https://www.verizon.com/" target="_blank"><img src="assets/Images/social/Company Logo (4).webp" alt="logo5"/></a>
+                      </div>
+                       <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <a href="https://slack.com/intl/en-gb/" target="_blank"><img src="assets/Images/social/Company Logo (7).webp" alt="logo8"/></a>
+                      </div>
+                       <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <a href="https://www.lexmark.com/en_us.html" target="_blank"><img src="assets/Images/social/Company Logo (5).webp" alt="logo6"/></a>
+                      </div>
+                       <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <a href="https://www.microsoft.com/en-us/" target="_blank"><img src="assets/Images/social/Company Logo (6).webp" alt="logo5"/></a>
+                      </div>
+                      
+                    </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
+     
  
    <footer class="footer py-5 ">
      <div class="container">
