create guide section with media query and media query for all sections

--- a/about.html
+++ b/about.html
@@ -150,33 +150,47 @@
               </div>
               <div class="social-end offset-md-1 col-md-8 col-sm-12">
                     <div class="row gap-3 ">
-                      <div class=" item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                      <div class=" item col-md-3 shadow-lg col-sm-12 bg-light d-flex justify-content-center align-items-center">
                         <a href="https://www.netflix.com/ps-en/" target="_blank"><img src="assets/Images/social/Company Logo.webp" alt="logo1"/></a>
                       </div>
-                      <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                      <div class="item col-md-3 shadow-lg col-sm-12 bg-light d-flex justify-content-center align-items-center">
                         <a href="https://www.youtube.com/" target="_blank"><img src="assets/Images/social/Company Logo (1).webp" alt="logo2"/></a>
                       </div>
-                        <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <div class="item col-md-3 shadow-lg col-sm-12 bg-light d-flex justify-content-center align-items-center">
                         <a href="https://www.google.com/" target="_blank"><img src="assets/Images/social/Company Logo (2).webp" alt="logo3"/></a>
                       </div>
-                        <div class="item col-md-3 shadow-lg  col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                        <div class="item col-md-3 shadow-lg  col-sm-12 bg-light d-flex justify-content-center align-items-center">
                         <a href="https://www.lenovo.com/us/en/?orgRef=https%253A%252F%252Fwww.google.com%252F&srsltid=AfmBOopsroZK_K1XcVWMIg8xCra0ee4g7zJcBRy-fyi5UtdopH7BBB46" target="_blank"><img src="assets/Images/social/Company Logo (3).webp" alt="logo4"/></a>
                       </div>
-                       <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                       <div class="item col-md-3 shadow-lg col-sm-12 bg-light d-flex justify-content-center align-items-center">
                         <a href="https://www.verizon.com/" target="_blank"><img src="assets/Images/social/Company Logo (4).webp" alt="logo5"/></a>
                       </div>
-                       <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                       <div class="item col-md-3 shadow-lg col-sm-12 bg-light d-flex justify-content-center align-items-center">
                         <a href="https://slack.com/intl/en-gb/" target="_blank"><img src="assets/Images/social/Company Logo (7).webp" alt="logo8"/></a>
                       </div>
-                       <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                       <div class="item col-md-3 shadow-lg col-sm-12 bg-light d-flex justify-content-center align-items-center">
                         <a href="https://www.lexmark.com/en_us.html" target="_blank"><img src="assets/Images/social/Company Logo (5).webp" alt="logo6"/></a>
                       </div>
-                       <div class="item col-md-3 shadow-lg col-sm-6 bg-light d-flex justify-content-center align-items-center">
+                       <div class="item col-md-3 shadow-lg col-sm-12 bg-light d-flex justify-content-center align-items-center">
                         <a href="https://www.microsoft.com/en-us/" target="_blank"><img src="assets/Images/social/Company Logo (6).webp" alt="logo5"/></a>
                       </div>
                       
                     </div>
               </div>
+            </div>
+          </div>
+        </section>
+          <section class="guide  py-5" >
+          <div class="container">
+            <div class="row justify-content-between align-items-center ">
+              <div class="guide-start col-md-4 col-sm-12 d-flex justify-content-center align-items-start">
+               <img src="assets/Images/about/two-business-partners-working-office 1.webp" class=" img-fluid" alt="two business partener"/>
+            </div>
+              <div class="guide-end   col-md-8 col-sm-12 d-flex justify-content-center align-items-start flex-column">
+                  <span class="custom-color">OUR ONE BILLION MISSION</span>
+                <h2>Our one billion mission sounds bold, We agree.</h2>
+                  <p>"We cannot solve our problems with the same thinking we used when we created them."—Albert Einstein. Institutions are slow to change. Committees are where good ideas and innovative thinking go to die. Choose agility over dogma. Embrace and drive change. We need to wipe the slate clean and begin with bold, radical thinking.</p>
+              
             </div>
           </div>
         </section>
@@ -244,3 +258,8 @@ convallis nec. Donec mattis odio at.</p>
      </div>
      </div>
      </footer>
+       <!--bootsrap 5.3 js-->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </body>
+</body>
+</html>
