create branches section

--- a/contact.html
+++ b/contact.html
@@ -141,7 +141,59 @@
                      
                 </div>
             </div>
-                 </section>
+     </section>
+     <section class="branches py-5">
+        <div class="container">
+            <h2 class="text-center">Our branches all over the world.</h2>
+            <p class="text-center">Phasellus sed quam eu eros faucibus cursus. Quisque mauris urna, imperdiet id leo quis, luctus auctor nisi. </p>
+            <div class="row gap-lg-0 flex-md-wrap ">
+                <div class="col-lg-3  col-md-6   col-sm-12">
+    <div class="card rounded-0" >
+  
+  <div class=" info text-center bg-white p-2 ">
+    <span class="custom-color">mAIN BRANCHE</span>
+    <h6 class="fw-bolder">Los Angeles, California</h6>
+    <p class="card-text">1702 Olympic Boulevard
+Santa Monica, CA 90404</p>
+  </div>
+</div>
+                </div>
+                 <div class="col-lg-3  col-md-6   col-sm-12">
+    <div class="card card2 rounded-0" >
+  
+  <div class=" info text-center bg-white p-2 ">
+    <h6 class="fw-bolder">Tokyo, Japan</h6>
+    <p class="card-text">901 N Pitt Str., Suite 170
+Tokyo, VA 22314, Japan</p>
+  </div>
+</div>
+                </div>
+                  <div class="col-lg-3  col-md-6   col-sm-12">
+    <div class="card card3 rounded-0" >
+  
+  <div class=" info text-center bg-white p-2 ">
+    <h6 class="fw-bolder">Moscow, Russia</h6>
+    <p class="card-text">Anjeliersstraat 470H, 1015 NL
+Moscow, Russia</p>
+  </div>
+</div>
+                </div>
+                   <div class="col-lg-3  col-md-6   col-sm-12">
+    <div class="card card4 rounded-0" >
+  
+  <div class=" info text-center bg-white p-2 ">
+    <h6 class="fw-bolder">Mumbai, India</h6>
+    <p class="card-text">36 East 20th St, 6th Floor
+Mumbai, India</p>
+  </div>
+</div>
+                </div>
+ 
+</div>
+                </div>
+
+        
+     </section>
     </main>
 
  <!--bootsrap 5.3 js-->
