submit button for form in contact section

--- a/contact.html
+++ b/contact.html
@@ -254,6 +254,7 @@ Mumbai, India</p>
  <input type="text" id="email" name="" placeholder="Message Subject">
  <label > Message</label>
  <textarea placeholder="Message Subject" rows="5"></textarea>
+ <button type="submit" class="custom-btn w-50"> send message  </button>
 </form>
                 </div>
 
