create navbar for signup section

--- a/contact.html
+++ b/contact.html
@@ -269,34 +269,8 @@ Mumbai, India</p>
     </main>
  <footer class="footer py-5 ">
      <div class="container">
-       <div class="row">
-         <div class="footer-start d-flex flex-column  col-lg-5 col-md-5 col-sm-12 ">
-            <h2 class="fs-1">Start learning with 67.1k students around the world.</h2>
-            <div class=" footer-btn d-flex  align-items-start">
-             <button type="button" class="custom-btn fw-bold">Join The Family</button>
-            <button type="button" class=" browse-btn border-0 fw-bold">Browse All Courses</button>
-            </div>
        
-         </div>
-         <div class="footer-end  offset-lg-1  offset-md-1  col-lg-6 col-md-6 col-sm-12 d-flex align-items-center  justify-content-start ">
-          <div class="end-item">
-            <h2>6.3k</h2>
-            <p>Online course</p>
-          </div>
-          <div class="end-item">
-            <h2>26K</h2>
-            <p>Certified Instructor</p>
-          </div>
-          <div class="end-item">
-            <h2>99.9%</h2>
-            <p>Sucess Rate</p>
-          </div>
-
-         </div>
-         
-       </div>
-       <hr/>
-       <div class="footer2">
+       <div class="footer2 py-5">
           <div class="row">
         <div class="footer2-start d-flex flex-column align-items-start col-lg-3 col-md-3 col-sm-12">
           <img src="assets/Images/footer/LOGO.webp" alt="logo" class="img-fluid">
