--- a/signup.html
+++ b/signup.html
@@ -14,6 +14,7 @@
   <!--custom style-->
   <link href="assets/Css/main.css" rel="stylesheet"/>
   <link href="assets/Css/about.css" rel="stylesheet"/>
+  <link href="assets/Css/signup.css" rel="stylesheet"/>
 </head>
 <body>
     <nav class=" navbar2  navbar-expand-lg bg-body-tertiary">
@@ -38,14 +39,14 @@
          </div>
       </nav>  
       <main>
-       <section class=" signup py-5">
-        <div class="container">
+       <section class=" signup ">
+        
             <div class="row justify-content-between align-items-center ">
-                <div class=" col-md-6 col-sm-12">
-                    <img src="assets/Images/signup/Saly-1.webp"  class="img-fluid" alt="signup"/>
+                <div class=" signin-start col-md-6 col-sm-12 ">
+                    <img src="assets/Images/signup/Saly-1.webp"  class="img-fluid " alt="signup"/>
                 </div>
                 <div class=" offset-md-1 col-md-5 col-sm-12 d-flex flex-sm-column justify-content-sm-center align-items-sm-center">
-                    <form class="d-flex flex-column  gap-2">
+                    <form class="d-flex flex-column justify-content-center   gap-2">
                             <h2>Create your account</h2>
                             <label>Full Name</label>
                             <div  ><input type="text" name="firstname" placeholder="Firstname..." class="p-2"/>
@@ -75,7 +76,7 @@
                         </form>
                 </div>
             </div>
-        </div>
+       
        </section>
       </main>
 
