--- a/singlecourse.html
+++ b/singlecourse.html
@@ -12,6 +12,7 @@
   
   <!--custom style-->
   <link href="assets/Css/main.css" rel="stylesheet"/>
+  <link href="assets/Css/category.css" rel="stylesheet"/>
   <link href="assets/Css/singlecourse.css" rel="stylesheet"/>
 </head>
 <body>
@@ -67,7 +68,112 @@
         </div>
   </div>
         </nav>
-        <main></main>
+        <main>
+           <section class="bestselling-courses py-5">
+          <div class="container">
+
+      <div class="row justify-content-center align-items-center ">
+        <h2 class="text-start fw-bold mb-0">Related Courses</h2>
+        <div class="card col-lg-3 col-md-6 col-sm-12">
+  <img src="assets/Images/courses/Course Images.webp" class="card-img-top img-fluid w-100" alt="course1">
+  <div class="card-body d-flex flex-column ">
+    <div class="card-head d-flex justify-content-between align-items-center">
+      <span>Design</span>
+      <span>$57</span>
+    </div>
+    <p class="card-text">Machine Learning A-Z™: Hands-On Python & R In Data...</p>
+    <hr/>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="card-footer-start">
+      <img src="assets/Images/courses/Star.webp" alt="star"/>
+      <span>5.0</span>
+    </div>
+     <div class="card-footer-end">
+      <span>265.7K</span>
+      <span> students</span>
+
+    </div>
+    </div>
+  
+   
+  </div>
+</div>
+       <div class="card col-lg-3 col-md-6 col-sm-12">
+  <img src="assets/Images/courses/Course Images (1).webp" class="card-img-top img-fluid w-100" alt="course1">
+  <div class="card-body d-flex flex-column ">
+    <div class="card-head d-flex justify-content-between align-items-center">
+      <span class="card2">Developments</span>
+      <span>$57</span>
+    </div>
+    <p class="card-text">The Complete 2021 Web Development Bootcamp</p>
+    <hr/>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="card-footer-start">
+      <img src="assets/Images/courses/Star.webp" alt="star"/>
+      <span>5.0</span>
+    </div>
+     <div class="card-footer-end">
+      <span>265.7K</span>
+      <span> students</span>
+
+    </div>
+    </div>
+  
+   
+  </div>
+</div>
+       <div class="card col-lg-3 col-md-6 col-sm-12" >
+  <img src="assets/Images/courses/Course Images (2).webp" class="card-img-top img-fluid w-100" alt="course1">
+  <div class="card-body d-flex flex-column ">
+    <div class="card-head d-flex justify-content-between align-items-center">
+      <span class="card3">Business</span>
+      <span>$57</span>
+    </div>
+    <p class="card-text">Learn Python Programming Masterclass</p>
+    <hr/>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="card-footer-start">
+      <img src="assets/Images/courses/Star.webp" alt="star"/>
+      <span>5.0</span>
+    </div>
+     <div class="card-footer-end">
+      <span>265.7K</span>
+      <span> students</span>
+
+    </div>
+    </div>
+  
+   
+  </div>
+</div>
+         <div class="card col-lg-3 col-md-6 col-sm-12" >
+  <img src="assets/Images/courses/Course Images (3).webp" class="card-img-top img-fluid w-100" alt="course3">
+  <div class="card-body d-flex flex-column ">
+    <div class="card-head d-flex justify-content-between align-items-center">
+      <span class="card4">Marketing</span>
+      <span>$57</span>
+    </div>
+    <p class="card-text">The Complete Digital Marketing Course - 12 Courses in 1</p>
+    <hr/>
+    <div class="d-flex justify-content-between align-items-center">
+        <div class="card-footer-start">
+      <img src="assets/Images/courses/Star.webp" alt="star"/>
+      <span>5.0</span>
+    </div>
+     <div class="card-footer-end">
+      <span>265.7K</span>
+      <span> students</span>
+
+    </div>
+    </div>
+  
+   
+  </div>
+</div>
+    </div>
+    </div>
+          </section>
+        </main>
 
   <footer class="footer py-5 ">
      <div class="container">
