correct branches section in contact page

--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
         <div class="container">
             <h2 class="text-center">Our branches all over the world.</h2>
             <p class="text-center">Phasellus sed quam eu eros faucibus cursus. Quisque mauris urna, imperdiet id leo quis, luctus auctor nisi. </p>
-            <div class="row gap-lg-0 flex-md-wrap ">
+            <div class="row gap-lg-0  ">
                 <div class="col-lg-3  col-md-6   col-sm-12">
     <div class="card rounded-0" >
   
