make a button on hero work

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
          <div class="hero-info  d-flex flex-column align-items-start col-xl-4 col-lg-4 col-sm-12">
        <h1>Learn with expert anytime anywhere</h1>
        <p>Our mision is to help people to find the best course online and learn with expert anytime, anywhere.</p>
-       <button class="custom-btn" type="button">Create Account</button>
+      <a  href="signup.html"><button class="custom-btn" type="submit"> Create Account</button></a> 
     </div>
     <div class="hero-img col-xl-8 col-lg-8 col-sm-12">
 <img src="assets/Images/Hero/hero.webp" alt="heroimg"/>
