--- a/courselist.html
+++ b/courselist.html
@@ -106,7 +106,7 @@
             </div>
            
             <div class="row justify-content-center align-items-center">
-                 <div class="card col-lg-3 col-md-6 col-sm-12 p-0 rounded-0">
+             <a href="singlecourse.html">            <div class="card col-lg-3 col-md-6 col-sm-12 p-0 rounded-0">
   <img src="assets/Images/category/courses/Course Images.webp" class="card-img-top img-fluid w-100" alt="course1">
   <div class="card-body d-flex flex-column ">
     <div class="card-head d-flex justify-content-between align-items-center">
@@ -129,7 +129,9 @@
   
    
   </div>
-</div>
+</div></a>    
+             
+ 
               <div class="card col-lg-3 col-md-6 col-sm-12 p-0 rounded-0">
   <img src="assets/Images/category/courses/Course Images (1).webp" class="card-img-top img-fluid w-100" alt="course2">
   <div class="card-body d-flex flex-column ">
