ctreate comment section

--- a/singlecourse.html
+++ b/singlecourse.html
@@ -139,6 +139,7 @@
   </li>
   
 </ul>
+</div>
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active " id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
     <h2 >Description</h2>
@@ -157,7 +158,7 @@ Second, this is a Development course. But I don't teach you how to code. Because
 
       <img src="assets/Images/singlecourse/instructor2.webp" alt="instructor2"/>
     </div>
-  <div class="instructor-content col-md-9 col-sm-12 d-flex flex-column gap-3 align-items-start justify-content-sm-center align-items-sm-center">
+  <div class="instructor-content col-md-9 col-sm-12 d-flex flex-column gap-3 align-items-start ">
     <h4>Vako Shvili</h4>
     <span>Web Designer & Best-Selling Instructor</span>
     <div>
@@ -217,11 +218,66 @@ Second, this is a Development course. But I don't teach you how to code. Because
 
   </div>
   </div>
+  <div class="comments py-5">
+    <div class="container ">
+     <h3 class="mb-5"> Students Feedback</h3>
+     <div class="row p-3">
+      <div class="col-md-1 col-sm-12">
+        <img src="assets/Images/singlecourse/comment2.webp" alt="comment1"/>
+      </div>
+      <div class=" comment-detail col-md-11 col-sm-12">
+        <h4>Guy Hawkins <span class="text-secondary">•1 week ago</span></h4>
+        <ul class="list-unstyled d-flex"><li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+        </ul>
+        <p>I appreciate the precise short videos (10 mins or less each) because overly long videos tend to make me lose focus. The instructor is very knowledgeable in Web Design and it shows as he shares his knowledge. These were my best 6 months of training. Thanks, Vako.</p>
+      </div>
+     </div>
+     <hr/>
+       <div class="row p-3">
+      <div class="col-md-1 col-sm-12">
+        <img src="assets/Images/singlecourse/comment1.webp" alt="comment2"/>
+      </div>
+      <div class=" comment-detail col-md-11 col-sm-12">
+        <h4>Dianne Russell <span class="text-secondary">• 51 mins ago</span></h4>
+        <ul class="list-unstyled d-flex"><li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+        </ul>
+        <p>I appreciate the precise short videos (10 mins or less each) because overly long videos tend to make me lose focus. The instructor is very knowledgeable in Web Design and it shows as he shares his knowledge. These were my best 6 months of training. Thanks, Vako.</p>
+      </div>
+     </div>
+     <hr/>
+        <div class="row p-3">
+      <div class="col-md-1 col-sm-12">
+        <img src="assets/Images/singlecourse/comment3.webp" alt="comment3"/>
+      </div>
+      <div class=" comment-detail col-md-11 col-sm-12">
+        <h4>Bessie Cooper <span class="text-secondary">• 6 hours ago</span></h4>
+        <ul class="list-unstyled d-flex"><li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+          <li><img src="assets/Images/singlecourse/Star.webp"  alt="star"/></li>
+        </ul>
+        <p>I appreciate the precise short videos (10 mins or less each) because overly long videos tend to make me lose focus. The instructor is very knowledgeable in Web Design and it shows as he shares his knowledge. These were my best 6 months of training. Thanks, Vako.</p>
+      </div>
+     </div>
+     <hr/>
+    </div>
+  </div>
+  
   
 </div>
   </div>
   <div class="tab-pane fade " id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"> <h2>resume:</h2>
-  <img src="assets/Images/singlecourse/curriculum-vitae-template-free.webp" class="img-fluid"> </div>
+  <img src="assets/Images/singlecourse/curriculum-vitae-template-free.webp" class="img-fluid"> 
+</div>
   <div class="tab-pane fade " id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0"><h2>Instructor:</h2>
     <img src="assets/Images/courses/Course Images (4).webp" alt="insrtucter"/>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, repudiandae eos. Nihil, suscipit magnam iusto, officia expedita quam a deleniti accusamus, temporibus mollitia modi amet nobis? Id amet quisquam sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor iure, consequatur iste, libero minus tenetur quia delectus quaerat ex maiores blanditiis ab ratione accusamus voluptas sunt officia animi quis. Est.</p>
@@ -233,8 +289,10 @@ I do! And that's why I got into this field. Not for the love of Web Design, whic
 
 For example, this is a Design course but I don't teach you Photoshop. Because Photoshop is needlessly complicated for Web Design. But people still teach it to web designers. I don't. I teach Figma – a simple tool that is taking over the design world. You will be designing a complete website within a week while others are still learning how to create basic layouts in Photoshop.
 
-Second, this is a Development course. But I don't teach you how to code. Because for Web Design coding is needlessly complicated and takes too long to learn. Instead, I teach Webflow – a tool that is taking over the web design world. You will be building complex websites within two weeks while others are still learning the basics of HTML & CSS. Third, this is a Freelancing course. But I don't just teach you how to write great proposals. I give you a winning proposal template. When you're done with the course, you will have a stunning portfolio website with portfolio pieces already in it. Buy this course now and take it whenever the time is right for you.</p></div>
+Second, this is a Development course. But I don't teach you how to code. Because for Web Design coding is needlessly complicated and takes too long to learn. Instead, I teach Webflow – a tool that is taking over the web design world. You will be building complex websites within two weeks while others are still learning the basics of HTML & CSS. Third, this is a Freelancing course. But I don't just teach you how to write great proposals. I give you a winning proposal template. When you're done with the course, you will have a stunning portfolio website with portfolio pieces already in it. Buy this course now and take it whenever the time is right for you.</p>
 </div>
+
+
             </div>
             
           </section>
