edit description section on singke course page

--- a/singlecourse.html
+++ b/singlecourse.html
@@ -141,7 +141,7 @@
 </ul>
 </div>
 <div class="tab-content" id="myTabContent">
-  <div class="tab-pane fade show active " id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
+  <div class="tab-pane fade show active p-5 " id="home-tab-pane" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
     <h2 >Description</h2>
     <p>It gives you a huge self-satisfaction when you look at your work and say, "I made this!". I love that feeling after I'm done working on something. When I lean back in my chair, look at the final result with a smile, and have this little "spark joy" moment. It's especially satisfying when I know I just made $5,000.
 
@@ -150,7 +150,7 @@ I do! And that's why I got into this field. Not for the love of Web Design, whic
 For example, this is a Design course but I don't teach you Photoshop. Because Photoshop is needlessly complicated for Web Design. But people still teach it to web designers. I don't. I teach Figma – a simple tool that is taking over the design world. You will be designing a complete website within a week while others are still learning how to create basic layouts in Photoshop.
 
 Second, this is a Development course. But I don't teach you how to code. Because for Web Design coding is needlessly complicated and takes too long to learn. Instead, I teach Webflow – a tool that is taking over the web design world. You will be building complex websites within two weeks while others are still learning the basics of HTML & CSS. Third, this is a Freelancing course. But I don't just teach you how to write great proposals. I give you a winning proposal template. When you're done with the course, you will have a stunning portfolio website with portfolio pieces already in it. Buy this course now and take it whenever the time is right for you.</p>
-<div class="instructor">
+<div class="instructor ">
   <h3>course instructor (02)</h3>
   <hr>
   <div class="row border-1 justify-content-start g-0 p-2 shadow">
@@ -275,14 +275,14 @@ Second, this is a Development course. But I don't teach you how to code. Because
   
 </div>
   </div>
-  <div class="tab-pane fade " id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"> <h2>resume:</h2>
+  <div class="tab-pane fade  p-5" id="profile-tab-pane" role="tabpanel" aria-labelledby="profile-tab" tabindex="0"> <h2>resume:</h2>
   <img src="assets/Images/singlecourse/curriculum-vitae-template-free.webp" class="img-fluid"> 
 </div>
-  <div class="tab-pane fade " id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0"><h2>Instructor:</h2>
-    <img src="assets/Images/courses/Course Images (4).webp" alt="insrtucter"/>
+  <div class="tab-pane fade  p-5 mb-5" id="contact-tab-pane" role="tabpanel" aria-labelledby="contact-tab" tabindex="0"><h2 class="mb-3">Instructor:</h2>
+    <img src="assets/Images/courses/Course Images (4).webp"  class="mb-5"alt="insrtucter"/>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, repudiandae eos. Nihil, suscipit magnam iusto, officia expedita quam a deleniti accusamus, temporibus mollitia modi amet nobis? Id amet quisquam sit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor iure, consequatur iste, libero minus tenetur quia delectus quaerat ex maiores blanditiis ab ratione accusamus voluptas sunt officia animi quis. Est.</p>
   </div>
-  <div class="tab-pane fade" id="review-tab-pane" role="tabpanel" aria-labelledby="review-tab" tabindex="0"><h2>Review:</h2>
+  <div class="tab-pane fade p-5 " id="review-tab-pane" role="tabpanel" aria-labelledby="review-tab" tabindex="0"><h2>Review:</h2>
   <p>It gives you a huge self-satisfaction when you look at your work and say, "I made this!". I love that feeling after I'm done working on something. When I lean back in my chair, look at the final result with a smile, and have this little "spark joy" moment. It's especially satisfying when I know I just made $5,000.
 
 I do! And that's why I got into this field. Not for the love of Web Design, which I do now. But for the LIFESTYLE! There are many ways one can achieve this lifestyle. This is my way. This is how I achieved a lifestyle I've been fantasizing about for five years. And I'm going to teach you the same. Often people think Web Design is complicated. That it needs some creative talent or knack for computers. Sure, a lot of people make it very complicated. People make the simplest things complicated. Like most subjects taught in the universities. But I don't like complicated. I like easy. I like life hacks. I like to take the shortest and simplest route to my destination. I haven't gone to an art school or have a computer science degree. I'm an outsider to this field who hacked himself into it, somehow ending up being a sought-after professional. That's how I'm going to teach you Web Design. So you're not demotivated on your way with needless complexity. So you enjoy the process because it's simple and fun. So you can become a Freelance Web Designer in no time.
